# Minesweeper

./: CMakeLists.txt  readme.txt
include/: Laud.h  Mang.h  Ruut.h
src/: Laud.cpp  Main.cpp  Mang.cpp  Ruut.cpp
